--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,7 +8,7 @@ body {
 h1 {
   margin:50px auto 0 auto;
 font-family: 'Parisienne', cursive;
-font-size:520.5%;
+font-size:562.5%;
 color:#66BFBF;
 line-height:2;
 }
@@ -18,9 +18,9 @@ line-height:2;
 
 h2 {
   font-family: 'Montserrat', sans-serif;
-  font-size:100%;
+  font-size:2.5rem;
   color:#66BFBF;
-  padding:5px;
+  padding:10px;
 }
 
 h3 {
@@ -37,25 +37,24 @@ h3 {
 
 .bottom-cloud {
   position: absolute;
-  left:130px;
-  top: 160px;
-  height:90px;
-  width:190px;
+  left: 300px;
+  bottom: 300px;
 }
-.spanishFlag {
-  position:absolute;
-  left:1px;
-  top:1px;
-}
+
 .top-cloud {
   position: absolute;
   right: 300px;
   top: 50px;
-  height:90px;
-  width:190px;
 }
-
-
+.spanishFlag {
+position:absolute;
+left:0px;
+top:0px;
+}
+.IranFlag {
+  position: absolute;
+    right: 0px;
+    top: 0px;
 }
 .personal {
   line-height: 2;
@@ -119,400 +118,23 @@ margin:100px 0;
   background: -moz-linear-gradient(top,  #077175,  #077175);
 }
 
-
-
-
-
-
-body { background: #66BFBF;margin:2%; }
-
-#SkillBox {
-    font-size: 20px;
-    font-family: 'Indie Flower', cursive;
-    width: 55%;
-    height: auto;
-    margin: 40px auto;
-    background-color: #66BFBF;
-    //border: 1px solid #cdcdcd;
-    padding: 10px;
-    border-radius:20px;
-    -o-border-radius:20px;
-    -webkit-border-radius:20px;
-    -ms-border-radius:20px;
-    -moz-border-radius:20px;
+.skill-row {
+  width:50%;
+  text-align: left;
+  line-height: 2;
+  margin:100px auto 100px auto;
 }
-#SkillBox img {
-    width: 20%;
-    height: 10%;
-    margin: auto 35%;
-    padding: 10px;
-}
-.SkillBar {
-    width: 90%;
-    height: 40px;
-    position: relative;
-    background: rgba(17, 17, 17, .3);
-    margin: 20px auto;
-}
-#Skill-HTML {
-    width: 60%;
-    animation: Animate-HTML 4s;
-    -webkit-animation: Animate-HTML 4s;
-    -moz-animation: Animate-HTML 4s;
-    -o-animation: Animate-HTML 4s;
-    height: 40px;
-    position: absolute;
-    background-color: #ea8564;
-}
-@keyframes Animate-HTML {
-    from {
-    width: 10px;
-}
-to {
-    width: 60%}
-}@-webkit-keyframes Animate-HTML {
-    from {
-    width: 10px;
-}
-to {
-    width: 100%}
-}@-moz-keyframes Animate-HTML {
-    from {
-    width: 10px;
-}
-to {
-    width: 100%}
-}@-o-keyframes Animate-HTML {
-    from {
-    width: 10px;
-}
-to {
-    width: 100%}
-}#Skill-CSS {
-    animation: Animate-CSS 5s;
-    -webkit-animation: Animate-CSS 5s;
-    -moz-animation: Animate-CSS 5s;
-    -o-animation: Animate-CSS 5s;
-    width: 60%;
-    height: 40px;
-    position: absolute;
-    background-color: #55a69f;
-}
-@keyframes Animate-CSS {
-    from {
-    width: 10px;
-}
-to {
-    width: 60%}
-}@-webkit-keyframes Animate-CSS {
-    from {
-    width: 10px;
-}
-to {
-    width: 70%}
-}@-moz-keyframes Animate-CSS {
-    from {
-    width: 10px;
-}
-to {
-    width: 70%}
-}@-o-keyframes Animate-CSS {
-    from {
-    width: 10px;
-}
-to {
-    width: 70%}
-}#Skill-jQuery {
-    animation: Animate-jQuery 5s;
-    -webkit-animation: Animate-jQuery 5s;
-    -moz-animation: Animate-jQuery 5s;
-    -o-animation: Animate-jQuery 5s;
-    width: 50%;
-    height: 40px;
-    position: absolute;
-    background-color: #99856d;
-}
-@keyframes Animate-jQuery {
-    from {
-    width: 10px;
-}
-to {
-    width: 50%}
-}@-webkit-keyframes Animate-jQuery {
-    from {
-    width: 10px;
-}
-to {
-    width: 40%}
-}@-moz-keyframes Animate-jQuery {
-    from {
-    width: 10px;
-}
-to {
-    width: 40%}
-}@-o-keyframes Animate-jQuery {
-    from {
-    width: 10px;
-}
-to {
-    width: 40%}
-}#Skill-JS {
-    animation: Animate-JS 4s;
-    -webkit-animation: Animate-JS 4s;
-    -moz-animation: Animate-JS 4s;
-    -o-animation: Animate-JS 4s;
-    width: 55%;
-    height: 40px;
-    position: absolute;
-    background-color: #c44e45;
-}
-@keyframes Animate-JS {
-    from {
-    width: 10px;
-}
-to {
-    width: 55%}
-}@-webkit-keyframes Animate-JS {
-    from {
-    width: 10px;
-}
-to {
-    width: 65%}
-}@-moz-keyframes Animate-JS {
-    from {
-    width: 10px;
-}
-to {
-    width: 65%}
-}@-o-keyframes Animate-JS {
-    from {
-    width: 10px;
-}
-to {
-    width: 65%}
-}#Skill-XML {
-    animation: Animate-XML 4s;
-    -webkit-animation: Animate-XML 4s;
-    -moz-animation: Animate-XML 4s;
-    -o-animation: Animate-XML 4s;
-    width: 55%;
-    height: 40px;
-    position: absolute;
-    background-color: #5aa669;
-}
-@keyframes Animate-XML {
-    from {
-    width: 10px;
-}
-to {
-    width: 55%}
-}@-webkit-keyframes Animate-XML {
-    from {
-    width: 10px;
-}
-to {
-    width: 40%}
-}@-moz-keyframes Animate-XML {
-    from {
-    width: 10px;
-}
-to {
-    width: 40%}
-}@-o-keyframes Animate-XML {
-    from {
-    width: 10px;
-}
-to {
-    width: 40%}
-}#Skill-C {
-    animation: Animate-C 4s;
-    -webkit-animation: Animate-C 4s;
-    -moz-animation: Animate-C 4s;
-    -o-animation: Animate-C 4s;
-    width: 30%;
-    height: 40px;
-    position: absolute;
-    background-color: #970cc1;
-}
-@keyframes Animate-C {
-    from {
-    width: 10px;
-}
-to {
-    width: 30%}
-}@-webkit-keyframes Animate-C {
-    from {
-    width: 10px;
-}
-to {
-    width: 30%}
-}@-moz-keyframes Animate-C {
-    from {
-    width: 10px;
-}
-to {
-    width: 30%}
-}@-o-keyframes Animate-C {
-    from {
-    width: 10px;
-}
-to {
-    width: 30%}
-}#Skill-JAVA {
-    animation: Animate-JAVA 4s;
-    -webkit-animation: Animate-JAVA 4s;
-    -moz-animation: Animate-JAVA 4s;
-    -o-animation: Animate-JAVA 4s;
-    width: 30%;
-    height: 40px;
-    position: absolute;
-    background-color: #8e930c;
-}
-@keyframes Animate-JAVA {
-    from {
-    width: 10px;
-}
-to {
-    width: 30%}
-}@-webkit-keyframes Animate-JAVA {
-    from {
-    width: 10px;
-}
-to {
-    width: 25%}
-}@-moz-keyframes Animate-JAVA {
-    from {
-    width: 10px;
-}
-to {
-    width: 25%}
-}@-o-keyframes Animate-JAVA {
-    from {
-    width: 10px;
-}
-to {
-    width: 25%}
-}#Skill-PHP {
-    animation: Animate-PHP 4s;
-    -webkit-animation: Animate-PHP 4s;
-    -moz-animation: Animate-PHP 4s;
-    -o-animation: Animate-PHP 4s;
-    width: 30%;
-    height: 40px;
-    position: absolute;
-    background-color: #5A69A6;
-}
-@keyframes Animate-PHP {
-    from {
-    width: 10px;
-}
-to {
-    width: 30%}
-}@-webkit-keyframes Animate-PHP {
-    from {
-    width: 10px;
-}
-to {
-    width: 30%}
-}@-moz-keyframes Animate-PHP {
-    from {
-    width: 10px;
-}
-to {
-    width: 30%}
-}@-o-keyframes Animate-PHP {
-    from {
-    width: 10px;
-}
-to {
-    width: 50%}
-}#Skill-SQL {
-    animation: Animate-SQL 4s;
-    -webkit-animation: Animate-SQL 4s;
-    -moz-animation: Animate-SQL 4s;
-    -o-animation: Animate-SQL 4s;
-    width: 40%;
-    height: 40px;
-    position: absolute;
-    background-color: #23b1db;
-}
-@keyframes Animate-SQL {
-    from {
-    width: 10px;
-}
-to {
-    width: 40%}
-}@-webkit-keyframes Animate-SQL {
-    from {
-    width: 10px;
-}
-to {
-    width: 80%}
-}@-moz-keyframes Animate-SQL {
-    from {
-    width: 10px;
-}
-to {
-    width: 80%}
-}@-o-keyframes Animate-SQL {
-    from {
-    width: 10px;
-}
-to {
-    width: 80%}
-}#Skill-VBNET {
-    animation: Animate-VBNET 4s;
-    -webkit-animation: Animate-VBNET 4s;
-    -moz-animation: Animate-VBNET 4s;
-    -o-animation: Animate-VBNET 4s;
-    width: 45%;
-    height: 40px;
-    position: absolute;
-    background-color: #f8a51e;
-}
-@keyframes Animate-VBNET {
-    from {
-    width: 10px;
-}
-to {
-    width: 45%}
-}@-webkit-keyframes Animate-VBNET {
-    from {
-    width: 10px;
-}
-to {
-    width: 35%}
-}@-moz-keyframes Animate-VBNET {
-    from {
-    width: 10px;
-}
-to {
-    width: 35%}
-}@-o-keyframes Animate-VBNET {
-    from {
-    width: 10px;
-}
-to {
-    width: 35%}
-}.Skill-Area {
-    z-index: 1;
-    float: left;
-    //position: absolute;
-    margin-top: 15px;
-    margin-left: 15px;
-    text-shadow: none;
-    color: #fff;
-    //font-family: Lato-Regular, sans-serif;
-    font-size: 18px;
-}
+.computer {
+  float:left;
+  width:25%;
+  margin-right:30px;
 
 }
-
-
-
-
-
-
+.chillies {
+  width:25%;
+float:right;
+margin-left:30px;
+  }
 .bottom-container {
   background-color: #66BFBF;
   padding:50px 0 20px;
