--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,17 @@ h3 {
   height:90px;
   width:190px;
 }
-.spanishFlag {
+.iranianFlag {
   position:absolute;
   left:1px;
   top:1px;
 }
+.spanishFlag {
+  position:absolute;
+  left:90px;
+  top:1px;
+}
+
 .top-cloud {
   position: absolute;
   right: 300px;
